test/corpus/clobs-with-quotes.txt
=====
clobsWithQuotes.ion spec test value #5
=====
{{'''\
''\'
12345678901234567890123456789012345678901234567890123456789012345678901234567890
''\'
12345678901234567890123456789012345678901234567890123456789012345678901234567890
''\'
'''}}
----
(document
  (clob
    (escape)
    (escape)
    (escape)
    (escape)))
